--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ header{
     color:rgb(0, 0, 0);
 }
 section{
-    background: white;
+    background: rgb(255, 255, 255);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
     justify-content: center;
 
+}
+.chamada-texto{
+    margin-right: 5%;
 }
 
 
