--- a/style.css
+++ b/style.css
@@ -27,9 +27,16 @@ section{
 h1{
     font-size: 40px;
 }
+p{
+    font-size: 40px;
+}
 
 img{
     height: 200px;
+}
+.categoria-videos{
+    display:flex;overflow-x: auto;
+    gap: 10px;
 }
 
 
