--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
     font-size: 32px;
     color:rgb(0, 0, 0);
 }
-section{
+.chamada {
     background: rgb(255, 255, 255);
     padding-top: 80px;
     padding-bottom: 80px;
@@ -37,6 +37,10 @@ img{
 .categoria-videos{
     display:flex;overflow-x: auto;
     gap: 10px;
+}
+.categoria{
+ padding-left: 20px;
+ padding-right: 2opx;
 }
 
 
